[package]
name = "mira-cli"
version = "0.1.0"
authors = ["Rsplwe <i@rsplwe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mira-core = { path = "../mira-core" }
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "stream", "time", "io-util"] }